--- a/plugin_ds_demo.ipynb
+++ b/plugin_ds_demo.ipynb
@@ -908,9 +908,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ad-moe",
+   "display_name": "ad-venv",
    "language": "python",
-   "name": "ad-moe"
+   "name": "ad-venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -922,7 +922,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
